Fix/nav bar overflowing when title is long (#290)
* Prevent links from wrapping

* Get spacing how I want it except doesn't show ellipses

* Make it work ok without tag or eillpses

* Add a popover

* Style tooltip

* Center tooltip on title itself

* Make tooltip disappear on mouseout

* Fix ellipsis issue

* Increase mouseEnterDelay to 1 sec

* Nudge popover position up a little bit

--- a/src/components/ViewerTitle/style.css
+++ b/src/components/ViewerTitle/style.css
@@ -2,7 +2,15 @@
     text-align: center;
     font-size: 16px;
     font-weight: 400;
-    display: block;
+    display: flex;
+    max-width: calc(100vw - 562px);
+    min-width: 0;
+}
+
+.title {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .tag {
