--- a/src/containers/AppHeader/style.css
+++ b/src/containers/AppHeader/style.css
@@ -32,6 +32,11 @@
     margin-left: 12px;
 }
 
+.left-links {
+    white-space: nowrap;
+    margin-right: 2em;
+}
+
 .home {
     margin-left: 2px;
     margin-right: 20px;
@@ -61,7 +66,7 @@
     }
 
     .buttons {
-        min-width: 282px;
+        min-width: 305px;
     }
 }
 
