--- a/src/style.css
+++ b/src/style.css
@@ -113,7 +113,7 @@ use the :after pseduo selector to input the content.
     content: "\e907";
 }
 
-.ant-tooltip-inner {
+.ant-tooltip-inner, .ant-popover-inner {
     border-radius: 3px;
     font-weight: 300;
     box-shadow: 2px 2px 3px black;
